# mcv-game-template

./: Cargo.toml  LICENSE.txt  README.md
game_lib/src/: lib.rs  math.rs  render.rs  state.rs
game_win32/: Cargo.toml  build.rs
game_win32/src/: main.rs
