[package]
name = "game_win32"
version = "0.1.0"
edition = "2021"

[features]
default = ["dep:game"]
hotreload = []

[build-dependencies]
gl_generator = "0.14"

[dependencies]
game = { path = "../game_lib", optional = true }

[dependencies.windows-sys]
version = "0.45.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_Media",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]